--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,7 +1,7 @@
 <h1>Author</h1>
 
 <p>
-    This Web Site has been created by Jose Ignacio Villegas Villegas y Raúl Luengo XImenez-Cruz.
+    This Web Site has been created by Jose Ignacio Villegas Villegas y Raúl Luengo Ximenez-Cruz.
 </p>
 
 <img src="/images/imagen.png"  />
