--- a/views/tips/index.ejs
+++ b/views/tips/index.ejs
@@ -27,6 +27,13 @@
                     </a>
 
                 <% } %>
+                <% if (isAdmin || isQuizAuthor) { %>
+
+                <a href="/quizzes/<%= quizId %>/tips/<%= tip.id %>/edit">
+                    <button>Edit</button>
+                </a>
+
+                <% } %>
             </li>
         <% } %>
     <% } %>
